--- a/unit/CMakeLists.txt
+++ b/unit/CMakeLists.txt
@@ -1,8 +1,5 @@
 
 
 
-AUX_SOURCE_DIRECTORY("." unit_src_list)
 
-
-
-ADD_LIBRARY(unit STATIC ${unit_src_list})
+ADD_SUBDIRECTORY("./tests/" "./tests/")
